# slam-map-reuse

./: CMakeLists.txt  README.md  buffer.cpp  gnuplot.script  icp.cpp  main.cpp
data/descriptors/: 3DSC.txt  FPFH.txt  IS.txt  SHOT.txt  data_to_txt.cpp  gnuplot.script  points.txt  points_total.txt
data/descriptors/massif/: massif.3DSC  massif.FPFH  massif.FPFH2  massif.IS  massif.SHOT
include/: Params.h  mapReuse.h  utils.h
src/: mapReuse.cpp
